# rules_probe_rs

./: .bazelignore  .gitattributes  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: release.yml  release_prep.sh
docs/: BUILD.bazel  rules.md
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
examples/nrf52840/: .bazelrc  Cargo.toml  Embed.toml  MODULE.bazel  README.md
examples/nrf52840/.cargo/: config.toml
examples/nrf52840/blinky/: BUILD.bazel  Cargo.toml  linker.x
examples/nrf52840/blinky/src/: main.rs
examples/nrf52840/toolchain/: BUILD
probe_rs/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl
probe_rs/private/: BUILD.bazel  repositories.bzl
probe_rs/private/templates/: probe_rs_archive.BUILD.tpl
probe_rs/tests/: versions_test.bzl
probe_rs_tools/: BUILD.bazel  extensions.bzl  repositories.bzl  toolchain.bzl
probe_rs_tools/private/: BUILD.bazel  archives.bzl  repositories.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
probe_rs_tools/private/templates/: probe_rs.BUILD.tpl
probe_rs_tools/tests/: versions_test.bzl
