load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "archives",
    srcs = ["archives.bzl"],
    visibility = ["//probe_rs_tools:__subpackages__"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//probe_rs_tools:__subpackages__"],
    deps = [":archives"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//probe_rs_tools:__subpackages__"],
)
