load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_probe_rs//probe_rs:defs.bzl", "probe_rs")

platform(
    name = "nrf52840",
    constraint_values = [
        "@platforms//cpu:armv7e-m",
        "@platforms//os:none",
    ],
)

rust_binary(
    name = "blinky",
    srcs = ["src/main.rs"],
    linker_script = ":linker.x",
    target_compatible_with = [
        "@platforms//cpu:armv7e-m",
        "@platforms//os:none",
    ],
    deps = [
        "@crates//:cortex-m-rt",
        "@crates//:defmt",
        "@crates//:defmt-rtt",
        "@crates//:embassy-executor",
        "@crates//:embassy-nrf",
        "@crates//:embassy-time",
        "@crates//:panic-probe",
    ],
)

platform_transition_filegroup(
    name = "elf",
    srcs = [":blinky"],
    target_platform = ":nrf52840",
)

probe_rs.run(
    name = "run",
    chip = "nRF52840_xxAA",
    elf = ":elf",
)
